# ferroscope

./: Cargo.toml  LICENSE  README.md
UI/: .gitignore  Dockerfile  README.md  docker-compose.yml  package-lock.json  package.json  setup.mjs
UI/src/app/: globals.css  layout.tsx  page.tsx
UI/src/app/login/: page.tsx
UI/src/app/nodes/[id]/: page.tsx
UI/src/components/dashboard/: CPUChart.tsx  ChangePasswordModal.tsx  Header.tsx  NodeCard.tsx  NodeGrid.tsx  RAMChart.tsx  StatsDisplay.tsx
UI/src/components/providers/: ThemeProvider.tsx
UI/src/components/ui/: ThemeToggle.tsx  password-input.tsx
UI/src/lib/: api.ts  utils.ts
UI/src/types/: index.ts
agent/: AGENT.MD  Cargo.toml
agent/src/: jobs.rs  main.rs  set_up.rs  system.rs
agent/src/jobs/: config_parse.rs  config_reader.rs  executor.rs  structures.rs
agent/src/system/: logic.rs  structures.rs
server/: .dockerignore  API.MD  Cargo.toml  Dockerfile  STREAMING.MD  dev-compose.yml
server/src/: agent_views.rs  main.rs  models.rs  objects.rs  user_views.rs
server/src/agent_views/: auth.rs  middleware.rs  objects.rs  urls.rs  views.rs
server/src/user_views/: auth.rs  middleware.rs  payloads.rs  response.rs  streaming.rs  urls.rs  views.rs
src/: main.rs
src/system/: logic.rs  mod.rs  structures.rs
