[package]
name = "ferroscope"
version = "0.1.0"
edition = "2024"

[dependencies]
procfs = "0.18.0"
anyhow = "1.0"
sha2 = "0.10.9"
tokio = { version = "1.49.0", features = ["full"] }
reqwest = { version = "0.12", features = ["json"] }
serde_json = "1.0.149"
config = "0.15.19"
serde = { version = "1.0", features = ["derive"] }
sysinfo = "0.38.2"
#rustls = "0.23.37"
#tokio-rustls = "0.26.4"
#x509-parser = "0.18.1"

